test/ShadowingErrorLocal.os
int A = 5;

func int problem(int B)
{
  int A = B + 3;
  return A * 2;
}

proc void main()
{
  print(problem(3), '\n');
}
